# Investment-Research-Platform

./: .env.example  .gitignore  01第一期-研究信息中台MVP实施文档.md  02第一期开发任务清单（按天按周排期）.md  03第一期-接口清单（API 设计）.md  04第一期数据库表结构设计.md  05第一期项目目录结构与代码骨架设计.md  06第一期数据库建表SQL初稿.md  06第一期数据库建表SQL初稿.sql  07第一期-项目现状评估报告.md  08第一期-项目进度与质量分析报告-2026-06-07.md  08第一期-项目进度与质量分析报告.md  09第一期-MVP验收与演示说明.md  11第一期前端设计方案.md  12-高保真原型_副本.html  12第一期前后端需求文档（高保真原型版）.md  12第一期需求规格文档（前后端完整版）.docx  12第一期需求规格文档（前后端完整版）.md  README.md  pyproject.toml  reingest_all.py  reingest_all_v2.py  研究信息中台MVP-项目进度与质量分析报告.md
app/: main.py
app/agents/: __init__.py  base_agent.py  orchestrator_agent.py  registry.py  reporting_agent.py  research_agent.py  supervisor.py
app/api/routers/: agents.py  assets.py  companies.py  documents.py  health.py  prompts.py  qa.py  search.py  tags.py  tasks.py
app/core/: config.py  exceptions.py  logger.py  middleware.py
app/db/: session.py
app/services/: assets.py  common.py  companies.py  documents.py  embeddings.py  llm.py  prompts.py  reports.py  search.py  tags.py  tasks.py  text.py
app/skills/: __init__.py  registry.py  research.py
docs/: database_setup.md
evals/: retrieval_cases.jsonl
scripts/: eval_retrieval.py  smoke_api.py  verify_schema.sql
tests/: test_api_smoke.py  test_core_units.py  test_retrieval_eval.py
